--- a/src/app/sheet/equipment/equipment.component.less
+++ b/src/app/sheet/equipment/equipment.component.less
@@ -2,3 +2,18 @@
     width: -webkit-fill-available;
     resize: vertical;
 }
+
+.boxed-value.currency {
+    width: 60px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+
+.equipment.container .edit-mode input {
+    margin-left: 3px;
+}
+
+.equipment.container .currencies label {
+    display: inline-block;
+    width: 55px;
+}
