--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -1,3 +1,4 @@
+<input type="checkbox" class="edit-mode-controller" />Edit Mode
 <div (change)="save()" class="sheet-container">
     <app-about [about]="character.about" [brawn]="character.aspects.getAspectRank('brawn')"></app-about>
     <app-aspects [aspects]="character.aspects"></app-aspects>
