--- a/src/app/sheet/about/about.component.less
+++ b/src/app/sheet/about/about.component.less
@@ -7,9 +7,7 @@
     resize: vertical;
 }
 
-input[type=checkbox].display.descriptions~.descriptions.container,
-input[type=checkbox].display.descriptions~.blank-descriptions,
-input[type=checkbox].hide.blank-descriptions:checked~.descriptions.container .description.blank {
+input[type=checkbox].display.descriptions~.descriptions.container {
     display: none;
 }
 
@@ -18,7 +16,6 @@ input[type=checkbox].hide.blank-descriptions~.descriptions.container .descriptio
     display: block;
 }
 
-input[type=checkbox].display.descriptions:checked~.blank-descriptions,
 input[type=checkbox].display.portrait:checked~.portrait-frame {
     display: inline-block;
 }
@@ -34,4 +31,45 @@ label {
 .portrait-frame {
     border: 1px solid black;
     display: none;
+}
+
+input[type=checkbox].display.portrait:not(:checked)~.sub-slider {
+    display: none;
+}
+
+.sub-slider {
+    display: block;
+    margin-left: 20px;
+}
+
+.field.three-digit label {
+    width: 80px;
+}
+
+.field .name-value {
+    width: 112px;
+}
+
+.field.mouseover {
+    position: relative;
+}
+
+.documentation.mouseover {
+    visibility: hidden;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-size: smaller;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    right: 105%;
+    white-space: normal;
+    width: 140px;
+}
+
+.field.mouseover:hover .documentation.mouseover {
+    visibility: visible;
 }
