--- a/src/app/sheet/equipment/equipment.component.html
+++ b/src/app/sheet/equipment/equipment.component.html
@@ -1,10 +1,10 @@
 <div class="equipment container">
     <h4>Equipment</h4>
-    <div  class="six-digit">
-        Income IP: <input type="number" min="0" step="1" [(ngModel)]="equipment.incomeIP"/>
-        Value: {{incomeValue}} <br/>
-        Lifestyle IP: <input type="number" min="0" step="1" [(ngModel)]="equipment.lifestyleIP" class="six-digit"/>
-        Value: {{lifestyleValue}}
+    <div class="six-digit currencies">
+        <label>Income</label><div class="boxed-value currency">{{incomeValue}}</div>
+        <span class="edit-mode">IP:<input type="number" min="0" step="1" [(ngModel)]="equipment.incomeIP" class="edit-mode"/></span><br/>
+        <label>Lifestyle</label><div class="boxed-value currency">{{lifestyleValue}}</div>
+        <span class="edit-mode">IP:<input type="number" min="0" step="1" [(ngModel)]="equipment.lifestyleIP" class="edit-mode"/></span><br/>
     </div>
     Assets:<br/>
     <textarea [(ngModel)]="equipment.notes">
