Edit-Mode flag in campaign object, more controls hidden in play-mode

--- a/src/app/sheet/sheet.component.less
+++ b/src/app/sheet/sheet.component.less
@@ -45,6 +45,11 @@
     text-align: right;
 }
 
+.boxed-value.one-digit {
+    width: 12px;
+    text-align: center;
+}
+
 h4 {
     margin-top: 3px;
     margin-bottom: 6px;
