--- a/src/app/sheet/spells/spells.component.html
+++ b/src/app/sheet/spells/spells.component.html
@@ -11,7 +11,7 @@
                 <div class="difficulty">{{getDifficulty(spell)}}</div>
                 <div class="description">{{getDescription(spell)}}</div>
             </div>
-            <input type="checkbox"
+            <input type="checkbox" class="edit-mode"
             [checked]="spells.hasSpell(spell)"
             (input)="spells.setSpell(spell,$event.target.checked)"
             [attr.disabled]="isDisabled(spell)"/>
