renaming Awareness to Perception

--- a/src/app/sheet/sheet.component.less
+++ b/src/app/sheet/sheet.component.less
@@ -131,6 +131,6 @@ button.cleverness {
     background-image: url("../../assets/img/cleverness.png");
 }
 
-button.awareness {
-    background-image: url("../../assets/img/awareness.png");
+button.perception {
+    background-image: url("../../assets/img/perception.png");
 }
