rename Creature Type to Specie

--- a/src/app/sheet/about/about.component.html
+++ b/src/app/sheet/about/about.component.html
@@ -7,7 +7,7 @@
   <div class="play-mode">
     Name: {{about.name}}
   </div>
-  Creature Type: {{about.character.specie.name}}
+  Specie: {{about.character.specie.name}}
   <div class="field height edit-mode">
     <label>Height</label>
     <input [(ngModel)]="about.height" />
